Bug 159955 - When using a custom page number in Writer, the custom page number and the actual sum of pages are switched in the sidebar
Summary: When using a custom page number in Writer, the custom page number and the act...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: All All
: medium trivial
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0 target:7.6.6 target:24.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-29 07:35 UTC by GJBUI
Modified: 2024-03-07 11:18 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
working example (9.43 KB, application/vnd.oasis.opendocument.text)
2024-03-01 09:31 UTC, GJBUI
Details
screenshot (70.15 KB, image/png)
2024-03-01 09:32 UTC, GJBUI
Details

Note You need to log in before you can comment on or make changes to this bug.
Description GJBUI 2024-02-29 07:35:58 UTC
Description:
Please keep in mind: I'm using the german version of Writer, I'm not sure wether this problem can be found in other translations.
After pasting in a break to a new page and there setting a custom page number, I've discovered that the info about the current page when clicking on the scroll bar is formated like this:
Page 3 (12) of 1
being 3 the actual page number, 12 the sum of all pages and 1 the set page number

Steps to Reproduce:
1. set a custom page number
2. click the scroll bar
3. be frustated

Actual Results:
Actual:
when clicking on the scroll bar is formated like this:
Page 3 (12) of 1
being 3 the actual page number, 12 the sum of all pages and 1 the set page number

Expected Results:
Expected:
when clicking on the scroll bar is formated like this:
Page 3 (1) of 12
being 3 the actual page number, 12 the sum of all pages and 1 the set page number


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 12; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (en_US); UI: de-DE
Calc: CL threaded
Comment 1 Julien Nabet 2024-02-29 11:09:26 UTC
Could you attach an example file and a screenshot?
Comment 2 GJBUI 2024-03-01 09:31:39 UTC
Created attachment 192886 [details]
working example
Comment 3 GJBUI 2024-03-01 09:32:45 UTC
Created attachment 192887 [details]
screenshot
Comment 4 GJBUI 2024-03-01 09:33:24 UTC
(In reply to Julien Nabet from comment #1)
> Could you attach an example file and a screenshot?

yes, of course. I uploaded them.
Comment 5 Julien Nabet 2024-03-01 10:58:49 UTC
Thank you for the detailed feedback, I could reproduce on pc Debian x86-64 with master sources updated today + gen rendering (these tips don't display with gtk).
Comment 6 Julien Nabet 2024-03-01 11:15:55 UTC
https://gerrit.libreoffice.org/c/core/+/164210
Comment 7 Commit Notification 2024-03-01 20:02:13 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e060f854cd175ff7ef8f3c2dd3f0dbf5cc48ad2

tdf#159955: fix custom page number

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2024-03-01 20:14:25 UTC
Patch waiting for review for 24.2 branch: https://gerrit.libreoffice.org/c/core/+/164197
Comment 9 Commit Notification 2024-03-05 17:35:12 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ba23eadc772ad983a810addd4df068fd43a7f7d5

tdf#159955: fix custom page number

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-03-07 11:18:50 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c899c2e463c61d056e68efd180e0a596c7569a1e

tdf#159955: fix custom page number

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.