tdf#159955: fix custom page number

Change-Id: I1a56a4ba266dfb3c21e3b77263ecaa44b4e6dad5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164210
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit d440dcfcaf688544a7a6d8bc478048159e5200f0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164197
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>